# LexoRead

./: CONTRIBUTING.md  README.md  README_SUMMARIZATION.md
api/: README.md  app.py  config.py  dependencies.py  summarization.py
api/models/: requests.py  responses.py
api/routers/: adaptation.py  emotional_tts.py
api/services/: .env.example  pyproject.toml  text_service.py
api/utils/: logging.py
datasets/: README.md  requirements.txt
datasets/config/: dataset_config.json
datasets/download_scripts/: README.md  download_all.py  download_gutenberg_samples.py
download_scripts/: download_common_voice.py  download_dyslexia_handwriting.py  download_textocr.py  download_utils.py
models/: README.md  download_pretrained.py  evaluate.py  summarization_model.py  summarization_requirements.txt
models/emotion_tts/: README.md  __init__.py  emotion_analyzer.py  enhanced_tts_model.py  requirements.txt
models/ocr/: model.py
models/reading_level/: model.py
models/text_adaptation/: model.py
models/tts/: model.py
models/user_profile/: model.py
preprocessing/: README.md  text_preprocessing.py
scripts/: README.md  benchmark.py  download_demo_data.py  export_model.py  setup_project.sh
