[tool.poetry]
name = "lexoread-api"
version = "0.1.0"
description = "API for LexoRead: AI-powered reading assistant for individuals with dyslexia and reading impairments"
authors = ["OpenImpactAI Team <info@openimpactai.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.18"
aiofiles = "^23.1.0"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
pillow = "^10.0.0"
torch = "^2.0.1"
numpy = "^1.25.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
nltk = "^3.8.1"
opencv-python = "^4.8.0.74"
librosa = "^0.10.0.post2"
soundfile = "^0.12.1"
transformers = "^4.30.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "numpy.*",
    "scipy.*",
    "sklearn.*",
    "nltk.*",
    "cv2.*",
    "librosa.*",
    "soundfile.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
